// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Categories list should render correctly 2 categories 1`] = `
<div>
  <TwoCards
    categoriesList={
      Array [
        Object {
          "id": 1,
          "link": "http://localhost/mock-slug-1",
          "name": "Some mock name",
          "slug": "mock-slug-1",
        },
        Object {
          "id": 2,
          "link": "http://localhost/mock-slug-2",
          "name": "Some other mock name",
          "slug": "mock-slug-2",
        },
      ]
    }
  />
</div>
`;

exports[`Categories list should render correctly 3 categories 1`] = `
<div>
  <ThreeCards
    categoriesList={
      Array [
        Object {
          "id": 1,
          "link": "http://localhost/mock-slug-1",
          "name": "Some mock name",
          "slug": "mock-slug-1",
        },
        Object {
          "id": 2,
          "link": "http://localhost/mock-slug-2",
          "name": "Some other mock name",
          "slug": "mock-slug-2",
        },
        Object {
          "id": 3,
          "link": "http://localhost/mock-slug-3",
          "name": "Some name",
          "slug": "mock-slug-3",
        },
      ]
    }
  />
</div>
`;

exports[`Categories list should render correctly 4 categories 1`] = `
<div>
  <FourCards
    categoriesList={
      Array [
        Object {
          "id": 1,
          "link": "http://localhost/mock-slug-1",
          "name": "Some mock name",
          "slug": "mock-slug-1",
        },
        Object {
          "id": 2,
          "link": "http://localhost/mock-slug-2",
          "name": "Some other mock name",
          "slug": "mock-slug-2",
        },
        Object {
          "id": 3,
          "link": "http://localhost/mock-slug-3",
          "name": "Some name",
          "slug": "mock-slug-3",
        },
        Object {
          "id": 4,
          "link": "http://localhost/mock-slug-4",
          "name": "Mock name",
          "slug": "mock-slug-4",
        },
      ]
    }
  />
</div>
`;

exports[`Categories list should render correctly 5 categories 1`] = `
<div>
  <FiveCards
    categoriesList={
      Array [
        Object {
          "id": 1,
          "link": "http://localhost/mock-slug-1",
          "name": "Some mock name",
          "slug": "mock-slug-1",
        },
        Object {
          "id": 2,
          "link": "http://localhost/mock-slug-2",
          "name": "Some other mock name",
          "slug": "mock-slug-2",
        },
        Object {
          "id": 3,
          "link": "http://localhost/mock-slug-3",
          "name": "Some name",
          "slug": "mock-slug-3",
        },
        Object {
          "id": 4,
          "link": "http://localhost/mock-slug-4",
          "name": "Mock name",
          "slug": "mock-slug-4",
        },
        Object {
          "id": 5,
          "link": "http://localhost/mock-slug-5",
          "name": "Some other other mock name",
          "slug": "mock-slug-5",
        },
      ]
    }
  />
</div>
`;

exports[`Categories list should render correctly no category 1`] = `<div />`;

exports[`Categories list should render correctly one category 1`] = `
<div>
  <OneCard
    categoriesList={
      Array [
        Object {
          "id": 1,
          "link": "http://localhost/mock-slug-1",
          "name": "Some mock name",
          "slug": "mock-slug-1",
        },
      ]
    }
  />
</div>
`;
